syntax = "proto3";

package br.com.itfree.heartmonitoring;
option java_multiple_files = true;
option java_package = "br.com.itfree.heartmonitoring.proto";
option java_outer_classname = "HeartbeatProto";

service HeartbeatService {
  rpc GetHeartbeats (HeartbeatRequest) returns (HeartbeatResponse); // Unary

  rpc GetHeartbeatsContinuously (HeartbeatRequest) returns (stream HeartbeatCountinuouslyResponse); // Server Streaming

  rpc SendHeartbeatsContinuously (stream HeartbeatClientStreamRequest) returns ( HeartbeatClientStreamResponse); // Client Streaming

  rpc SendHeartbeatsContinuouslyReceiveRealTimeSummary (stream HeartbeatClientStreamRequest) returns ( stream HeartbeatClientStreamResponse); // Bidirectional Streaming

}

message HeartbeatRequest {
  string name = 1;
}

message HeartbeatMessage {
  int32 bpm = 1;
  string timestamp = 2;
}

message HeartbeatResponse {
  HeartbeatMessage heartbeats = 1;
}

message HeartbeatCountinuouslyResponse {
  repeated HeartbeatMessage heartbeats = 1;
}

message HeartbeatClientStreamRequest {
  string name = 1;
  int32 bpm = 2;
  string timestamp = 3;
}

message HeartbeatClientStreamResponse {
  string name = 1;
  float average_bpm = 2;
  int32 min_bpm = 3;
  int32 max_bpm = 4;
  string timestamp = 5;
}